<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherDisplay</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="name_of_your_shout">Name of your shout?</string>
    <string name="what_you_like">What would you like to do?</string>
    <string name="where_are_you">Where?</string>
    <string name="when_is_it">When?</string>
    <string name="no_of_people">No of people?</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_weather">Weather Information</string>
    <string name="strCity">Sydney</string>
    <string name="strWeather">Sunny</string>
    <string name="strTemp">32°C</string>
    <string name="txtTemp">Temp</string>
    <string name="strWindSpeed">5kmph</string>
    <string name="txtWindSpeed">WindSpeed</string>
    <string name="Separator">---</string>
</resources>

