<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
    android:id="@+id/mytextText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
        android:hint="@string/name_of_your_shout"
    android:layout_marginTop="60dip"/>
    <requestFocus />





    <EditText
        android:id="@+id/mytextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="60dip"
        android:hint="@string/what_you_like"/>

        <requestFocus />





    <EditText
        android:id="@+id/mytextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="60dip"
        android:hint="@string/where_are_you"/>
        <requestFocus />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="60dp">

    <EditText
        android:id="@+id/mytextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_gravity="left"
        android:layout_marginTop="60dp"
        android:hint="@string/when_is_it" />
        <requestFocus />






    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:gravity="right"
        android:ems="10"
        android:hint="@string/no_of_people"
        android:layout_gravity="right"
        android:layout_marginStart="170dp"
        android:id="@+id/editText2" />
    <requestFocus/>
        </LinearLayout>

</LinearLayout>




